# www.algorithmology.org

./: .gitignore  README.md  _publish.yml  _quarto.yml  index.ipynb  index.qmd
.github/workflows/: publish.yml
_include/html/: header-include.html
allhands/: index.qmd
allhands/Module_Two_Team_Two/: index.qmd
allhands/weekfourteen/: index.qmd
allhands/weektwo/: index.qmd  main.py  test_evan.py  test_jason.py  test_rebekah.py  test_sabrina.py  test_simon.py
css/: styles.css
images/: Algorithmology-Logo.svg.icloud
schedule/: index-listing.json  index.qmd
schedule/weekeleven/: index.qmd
schedule/weekfifteen/: index.qmd
schedule/weekfive/: index.qmd
schedule/weekfour/: index.qmd
schedule/weekfourteen/: index.qmd
schedule/weeknine/: index.qmd
schedule/weekone/: index.qmd
schedule/weekseven/: index.qmd
schedule/weeksix/: index.qmd
schedule/weekten/: index.qmd
schedule/weekthirteen/: index.qmd
schedule/weekthree/: index.qmd
schedule/weektwelve/: index.qmd
schedule/weektwo/: index.qmd
slides/: index.qmd
slides/css/: styles.css
slides/weekeleven/: index.qmd
slides/weekfifteen/: index.qmd
slides/weekfive/: index.qmd  styles.css
slides/weekfour/: dayoftheweek.py  index.qmd  test_dayoftheweek.py
slides/weekfour/daydetector/: README.md  pyproject.toml
slides/weekfour/daydetector/daydetector/: dayoftheweek.py
slides/weekfour/daydetector/tests/: test_dayoftheweek.py
slides/weekfourteen/: index.qmd
slides/weeknine/: index.ipynb  index.qmd  index.quarto_ipynb
slides/weekone/: index.qmd
syllabus/: index.qmd
(+50 files in other folders)
